<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="location">Pod Blankami 13, 85-036 Bydgoszcz</string>
    <string name="open_time">Otwarte codziennie 10:00-22:00</string>
    <string name="slogan">Dobre miejsce na herbatę</string>
    <string name="name">Czajarnia</string>
    <string name="location_icon">location_icon</string>
    <string name="clock_icon">clock_icon</string>
    <string name="website_icon">website_icon</string>
    <string name="share_icon">share_icon</string>
    <string name="navigation_icon">navigation_icon</string>
    <string name="call_icon">call_icon</string>
</resources>
